almost done home-screen :creating etc-box

--- a/CSS/components/status-bar.css
+++ b/CSS/components/status-bar.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   padding: 5px 1px;
+  background-color: #ececec;
 }
 
 .status-bar__column:first-child span {
