--- a/CSS/components/nav-bar.css
+++ b/CSS/components/nav-bar.css
@@ -3,9 +3,9 @@
   bottom: 0;
   width: 100%;
   background-color: #f9f9fa;
-  padding: 10px 40px;
+  padding: 10px 40px 5px 40px;
   box-sizing: border-box;
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
 }
@@ -48,7 +48,10 @@
   justify-content: space-between;
 }
 .nav__btn span {
-  margin-top: 3px;
   font-size: 12px;
   font-weight: 600;
+  color: rgba(0, 0, 0, 0.6);
+}
+.nav__btn i {
+  color: rgba(0, 0, 0, 0.6);
 }
