--- a/CSS/screen/asset-box.css
+++ b/CSS/screen/asset-box.css
@@ -4,6 +4,7 @@
   border-radius: 20px;
   margin-left: 8px;
 }
+
 .asset-box__column {
   display: flex;
   justify-content: space-between;
@@ -15,10 +16,12 @@
   font-weight: 600;
   color: rgba(0, 0, 0, 0.8);
 }
+
 .asset-box__money {
   font-size: 15px;
   font-weight: 600;
 }
+
 .asset-box__send {
   font-size: 13px;
   margin-right: 10px;
@@ -27,10 +30,14 @@
   background-color: rgba(128, 128, 128, 0.2);
   font-weight: 600;
 }
+.consumption-box__main,
 .asset-box__main {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.consumption-box__main {
+  margin-bottom: 10px;
 }
 .asset-box__avatar--xl {
   width: 45px;
@@ -38,4 +45,34 @@
   border-radius: 20px;
   margin-left: 13px;
   margin-right: 9px;
+}
+.asset-box__avatar--m {
+  width: 60px;
+  height: 80px;
+  border-radius: 20px;
+  margin-left: 6px;
+  margin-right: 2px;
+}
+
+.asset-box {
+  margin-bottom: 10px;
+}
+.asset-box {
+  padding: 23px 10px 10px 10px;
+  border-radius: 25px;
+  background-color: white;
+}
+.asset-box__main {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+.asset-box__word {
+  font-size: 20px;
+  font-weight: 600;
+  margin-left: 15px;
+}
+.asset-box__chevron {
+  margin-right: 10px;
+  color: rgba(0, 0, 0, 0.4);
 }
