complete : send-page

--- a/CSS/benefits-css/benefits-page.css
+++ b/CSS/benefits-css/benefits-page.css
@@ -12,7 +12,7 @@
   margin-top: 15px;
   border-radius: 10px;
   padding: 35px 20px;
-  background-color: #d4d4d4;
+  background-color: #d4d4d49c;
   font-weight: 800;
   color: rgba(0, 0, 0, 0.6);
 }
