--- a/CSS/Home-screen-css/screen-header.css
+++ b/CSS/Home-screen-css/screen-header.css
@@ -1,5 +1,6 @@
 .screen-header {
   padding: 3px 15px 12px 15px;
+  background-color: rgba(128, 128, 128, 0.15);
 }
 .screen-header__title {
   font-size: 25px;
