--- a/CSS/components/status-bar.css
+++ b/CSS/components/status-bar.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   padding: 5px 1px;
-  background-color: #ececec;
+  background-color: rgb(255, 255, 255, 0.9);
 }
 
 .status-bar__column:first-child span {
