--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -2,4 +2,5 @@
   --horizontal-space: 15px;
   --border-att: 1px solid rgba(0, 0, 0, 0.1);
   --font-gray: rgba(0, 0, 0, 0.4);
+  --box-gray: #d4d4d4;
 }
