--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -3,4 +3,5 @@
   --border-att: 1px solid rgba(0, 0, 0, 0.1);
   --font-gray: rgba(0, 0, 0, 0.6);
   --box-gray: #d4d4d4;
+  --font-blue: #385be5;
 }
