--- a/CSS/benefits-css/benefits-page.css
+++ b/CSS/benefits-css/benefits-page.css
@@ -47,7 +47,8 @@
   justify-content: center;
   align-items: center;
   font-size: 30px;
-  width: 70px;
+  width: 50px;
+  margin-right: 15px;
 }
 .benefits-page__icons-foot {
   color: rgb(0, 0, 133);
@@ -85,7 +86,7 @@
 }
 .benefits-page__column span:first-of-type {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 600;
   color: #515866;
 }
 .benefits-page__column span:last-of-type {
