--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,6 +27,9 @@
 /* all-css */
 @import "all-css/all-header.css";
 @import "all-css/all-page.css";
+/* stock-setting-css */
+@import "stock-setting-css/stock-setting.css";
+
 body {
   height: 206.5vh;
   margin: 0;
