--- a/CSS/components/status-bar.css
+++ b/CSS/components/status-bar.css
@@ -6,6 +6,7 @@
   justify-content: center;
   padding: 5px 1px;
   background-color: rgb(255, 255, 255, 0.9);
+  font-weight: 600;
 }
 
 .status-bar__column:first-child span {
