--- a/CSS/components/home-status-bar.css
+++ b/CSS/components/home-status-bar.css
@@ -6,6 +6,7 @@
   justify-content: center;
   padding: 5px 1px;
   background-color: #ececec;
+  font-weight: 600;
 }
 
 .home-status-bar__column:first-child span {
